server/kubernetes/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orval-test-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orval-test-server
  template:
    metadata:
      annotations:
      labels:
        app: orval-test-server
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: orval-test
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: orval-test-server
      containers:
        - name: orval-test-server
          image: europe-west1-docker.pkg.dev/uk-cti-adtech-platform-test/orval-test/orval-test-server:${GIT_TAG}
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 10000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          ports:
            - name: app
              containerPort: 3000
          resources:
            limits:
              memory: 500Mi
              cpu: 500m
            requests:
              memory: 100Mi
              cpu: 100m
