server/kubernetes/base/gateway.yaml
---
apiVersion: launchpad.sky.uk/v1alpha1
kind: Gateway
metadata:
  name: orval-test-server
spec:
  realms:
    - name: ping
      auth: none
      allowInternet: false
      allowOnPrem: true
      routes:
        - path: / # https://orval-test-server.internal.test.adtechplatform.sky.com/
          methods:
            - GET
            - POST
            - PUT
            - PATCH
            - DELETE
            - OPTIONS

  services:
    - name: orval-test-server
      port: 3000
